Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda restaurant: restaurant['name']))\n",
+    "names = list(map(lambda restaurant: restaurant['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
