Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "total_reviews = sum(review_counts)\n",
+    "total_reviews = su\n",
     "total_reviews # 3420"
    ]
   },
