Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,8 @@
     }
    ],
    "source": [
-    "total_reviews = su\n",
+    "total_reviews = 0\n",
+    "for review in restaurant['review']\n",
     "total_reviews # 3420"
    ]
   },
