--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,8 @@
    ],
    "source": [
     "total_reviews = 0\n",
-    "for review in restaurant['review']\n",
+    "for review in review_counts\n",
+    "    \n",
     "total_reviews # 3420"
    ]
   },
