Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,8 +209,8 @@
    ],
    "source": [
     "total_reviews = 0\n",
-    "for review in review_counts\n",
-    "    \n",
+    "for review_count in review_counts\n",
+    "    total_reviews\n",
     "total_reviews # 3420"
    ]
   },
