--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return "
+    "    return list(map(format_rest))"
    ]
   },
   {
