--- a/index.ipynb
+++ b/index.ipynb
@@ -264,12 +264,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return list(map(format_rest))"
+    "    return list(map(format_restaurant, restaurants))"
    ]
   },
   {
