--- a/index.ipynb
+++ b/index.ipynb
@@ -325,12 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "lambda cannot contain assignment (<ipython-input-15-30a880ed597d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-30a880ed597d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(lambda restaurant: restaurant['is_closed'] = False, restaurants))\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m lambda cannot contain assignment\n"
+     ]
+    }
+   ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed']))"
+    "    return list(filter(lambda restaurant: restaurant['is_closed'] = False, restaurants))"
    ]
   },
   {
