Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,21 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "lambda cannot contain assignment (<ipython-input-15-30a880ed597d>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-30a880ed597d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(lambda restaurant: restaurant['is_closed'] = False, restaurants))\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m lambda cannot contain assignment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_closed'] = False, restaurants))"
+    "    return list(filter(lambda restaurant: not restaurant['is_closed'], restaurants))"
    ]
   },
   {
