Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    pass"
+    "    return list(filte)"
    ]
   },
   {
