--- a/index.ipynb
+++ b/index.ipynb
@@ -377,7 +377,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filte)"
+    "    return list(filter())"
    ]
   },
   {
