--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,8 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))\n",
+    "cheapest_re"
    ]
   },
   {
