--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    re"
+    "    return list(filter(lambda restaurant: re))"
    ]
   },
   {
